Dagger hilt implemented

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -34,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/status_imageView"
+        android:id="@+id/statusView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/loading_img"
